# zk_game_prototype

./: Cargo.toml
src/: mastermind.rs
