[package]
name = "mastermind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
secp256k1 = "0.23.4"
# bevy = "0.8"
# sha2 = "0.9.0"
# serde_json = "1.0"
# serde = { version = "1.0.136", features = ["derive"] }
# tokio = { version = "1", features = ["full"] }
# dotenv = "0.15.0"
# ethers = "2.0.14"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17.8"
[workspace]
resolver = "2"
